--- a/env_yolo.yaml
+++ b/env_yolo.yaml
@@ -1,6 +1,7 @@
 name: env_yolo
 channels:
   - defaults
+  - pytorch
 dependencies:
   - bzip2=1.0.8=h2bbff1b_5
   - ca-certificates=2024.3.11=haa95532_0
@@ -16,6 +17,9 @@ dependencies:
   - wheel=0.41.2=py311haa95532_0
   - xz=5.4.6=h8cc25b3_0
   - zlib=1.2.13=h8cc25b3_0
+  - pytorch==2.2.2
+  - torchaudio==2.2.2
+  - torchvision==0.17.2
   - pip:
       - absl-py==2.1.0
       - boto3==1.34.82
@@ -76,9 +80,6 @@ dependencies:
       - termcolor==2.4.0
       - terminaltables==3.1.10
       - thop==0.1.1-2209072238
-      - torch==2.2.2+cu121
-      - torchaudio==2.2.2+cu121
-      - torchvision==0.17.2+cu121
       - tqdm==4.66.2
       - typing-extensions==4.11.0
       - tzdata==2024.1
